fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -4,6 +4,7 @@ padding: 0;
 margin: 0;
 bottom: 0px;
 border: 1px solid red;
+max-height: 100%;
 }
 
 h1 {
